// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionView renders correctly with a list of paragraphs 1`] = `
<View>
  <Text
    style={
      {
        "padding": 10,
        "textAlign": "justify",
      }
    }
  >
    First paragraph
  </Text>
  <Text
    style={
      {
        "padding": 10,
        "textAlign": "justify",
      }
    }
  >
    Second paragraph
  </Text>
  <Text
    style={
      {
        "padding": 10,
        "textAlign": "justify",
      }
    }
  >
    Third paragraph
  </Text>
</View>
`;

exports[`DescriptionView renders fallback text when description array is empty 1`] = `
<View>
  <Text
    style={
      {
        "padding": 10,
        "textAlign": "justify",
      }
    }
  >
    Нет описания
  </Text>
</View>
`;

exports[`DescriptionView renders fallback text when first element is an empty string 1`] = `
<View>
  <Text
    style={
      {
        "padding": 10,
        "textAlign": "justify",
      }
    }
  >
    Нет описания
  </Text>
</View>
`;
